Add grotesque warning

--- a/lang/en.json
+++ b/lang/en.json
@@ -19,9 +19,10 @@
   "auth.username": "Username",
   "common.all": "All",
   "common.apply": "Apply",
-  "common.back": "<< Back",
+  "common.back": "Back",
   "common.change": "Change",
   "common.close": "Close",
+  "common.continue": "Continue",
   "common.default": "Default",
   "common.editTimes": "[Edited ({count})]",
   "common.loadMore": "Load More",
@@ -90,6 +91,7 @@
   "puzzle.creator": "Creator",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
+  "puzzle.grotesqueWarning": "WARNING! This puzzle has grotesque descriptions",
   "puzzle.hiddenContents": "This puzzle is not open to public access.",
   "puzzle.memoFromCreator": "Memo from creator",
   "puzzle.notExistDescription": "This puzzle does not exist!",
