--- a/lang/ja.json
+++ b/lang/ja.json
@@ -19,9 +19,10 @@
   "auth.username": "ユーザー名",
   "common.all": "すべて",
   "common.apply": "適用",
-  "common.back": "＜戻る",
+  "common.back": "戻る",
   "common.change": "変更",
   "common.close": "閉じる",
+  "common.continue": "続く",
   "common.default": "デフォルト",
   "common.editTimes": "編集済み({count})",
   "common.loadMore": "もっと見る",
@@ -90,6 +91,7 @@
   "puzzle.creator": "出題者",
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
+  "puzzle.grotesqueWarning": "注意！この問題は残酷な描写があります。続きますか？",
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
   "puzzle.memoFromCreator": "出題者からのメモ",
   "puzzle.notExistDescription": "この問題は存在しません",
