Add awards page

--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,13 @@
   "auth.password": "Password",
   "auth.signup": "Signup",
   "auth.username": "Username",
+  "awards.description": "Get awards for use in Cindy!",
+  "awards.group_goodQuestionCount": "Good Question Count Related",
+  "awards.group_puzzleCount": "Puzzle Count Related",
+  "awards.group_questionCount": "Question Count Related",
+  "awards.group_trueAnswerCount": "True Answer Count Related",
+  "awards.heading": "Awards",
+  "awards.title": "Awards Page",
   "common.all": "All",
   "common.apply": "Apply",
   "common.back": "Back",
