--- a/lang/ja.json
+++ b/lang/ja.json
@@ -17,6 +17,13 @@
   "auth.password": "パスワード",
   "auth.signup": "登録",
   "auth.username": "ユーザー名",
+  "awards.description": "称号をゲットしよう！",
+  "awards.group_goodQuestionCount": "良質数関連",
+  "awards.group_puzzleCount": "出題数関連",
+  "awards.group_questionCount": "質問数関連",
+  "awards.group_trueAnswerCount": "正解数関連",
+  "awards.heading": "称号一覧",
+  "awards.title": "称号一覧ページ",
   "common.all": "すべて",
   "common.apply": "適用",
   "common.back": "戻る",
