Add awards tab to puzzle subbar

--- a/lang/en.json
+++ b/lang/en.json
@@ -22,7 +22,7 @@
   "awards.group_puzzleCount": "Puzzle Count Related",
   "awards.group_questionCount": "Question Count Related",
   "awards.group_trueAnswerCount": "True Answer Count Related",
-  "awards.heading": "Awards",
+  "awards.header": "Awards",
   "awards.title": "Awards Page",
   "common.all": "All",
   "common.apply": "Apply",
