--- a/lang/ja.json
+++ b/lang/ja.json
@@ -22,7 +22,7 @@
   "awards.group_puzzleCount": "出題数関連",
   "awards.group_questionCount": "質問数関連",
   "awards.group_trueAnswerCount": "正解数関連",
-  "awards.heading": "称号一覧",
+  "awards.header": "称号一覧",
   "awards.title": "称号一覧ページ",
   "common.all": "すべて",
   "common.apply": "適用",
