--- a/lang/en.json
+++ b/lang/en.json
@@ -29,6 +29,7 @@
   "common.loading": "Loading...",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
+  "common.patron": "Patron",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
   "components.awardCheck.puzzleCountReaches": "Congratulations! You've created {count} puzzles and can get a new award!",
