--- a/lang/ja.json
+++ b/lang/ja.json
@@ -29,6 +29,7 @@
   "common.loading": "ロード中です・・・",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
+  "common.patron": "パトロン",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
   "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
   "components.awardCheck.puzzleCountReaches": "おめでとうございます！あなたの出題数が {count} に達し、新しい称号を獲得できるようになりました！",
