Add chatroom logs, polishes favorite chatrooms

--- a/lang/en.json
+++ b/lang/en.json
@@ -25,19 +25,26 @@
   "common.continue": "Continue",
   "common.default": "Default",
   "common.editTimes": "[Edited ({count})]",
+  "common.jump": "Jump",
   "common.loadMore": "Load More",
   "common.loading": "Loading...",
+  "common.next": "Next",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
   "common.patron": "Patron",
+  "common.prev": "Prev",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
   "components.awardCheck.puzzleCountReaches": "Congratulations! You've created {count} puzzles and can get a new award!",
   "components.awardCheck.questionCountReaches": "Congratulations! You've asked {count} questions and can get a new award!",
   "components.awardCheck.trueAnswerCountReaches": "Congratulations! You've got {count} true answers and can get a new award!",
+  "components.chat.addToFavoriteChatrooms": "Add To Favorite Chatrooms",
   "components.chat.changeChannel": "Change Channel",
   "components.chat.changeToDefaultChannel": "Change To Default Channel",
   "components.chat.channelAsDefault": "Default ({channelName})",
+  "components.chat.deleteFromFavoriteChatrooms": "Delete From Favorite Chatrooms",
+  "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
+  "components.chat.noDescription": "This chatroom does not have a description.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
   "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
