--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,7 @@
   "common.notExist": "Page Not Exists",
   "common.patron": "Patron",
   "common.prev": "Prev",
+  "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
   "components.awardCheck.puzzleCountReaches": "Congratulations! You've created {count} puzzles and can get a new award!",
@@ -151,12 +152,16 @@
   "stamp.namespace_puzzle": "Puzzle",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
+  "toolbar.users": "Users",
   "toolbar.wiki": "Wiki",
   "user.currentUserProfileIsEmpty": "It seems that you haven't written a profile yet. Introduce your self in a few words now!",
   "user.description": "User Profile in Cindy",
   "user.profileIsEmpty": "This user does not have a profile",
   "user.profileOf": "{nickname}'s Profile",
   "user.title": "User Profile",
+  "users.description": "Recently registered users in Cindy",
+  "users.header": "Users",
+  "users.title": "Users Page",
   "webNotify.deniedMessage": "Notification seems to be disabled by your browser settings. Cindy will not send you messages.\nIf you find the notifications annoying, simply close the Cindy tab instead of block it. Cindy will not send you notifications when Cindy tab is not open.",
   "webNotify.memoUpdated": "Memo for Puzzle \"{puzzle}\" is updated",
   "webNotify.newDialogueAdded": "New Question Added",
