--- a/lang/ja.json
+++ b/lang/ja.json
@@ -40,6 +40,7 @@
   "common.notExist": "このページは存在しません",
   "common.patron": "パトロン",
   "common.prev": "＜前",
+  "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
   "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
   "components.awardCheck.puzzleCountReaches": "おめでとうございます！あなたの出題数が {count} に達し、新しい称号を獲得できるようになりました！",
@@ -151,12 +152,16 @@
   "stamp.namespace_puzzle": "問題パネル",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
+  "toolbar.users": "ユーザー",
   "toolbar.wiki": "Cindy+Wiki",
   "user.currentUserProfileIsEmpty": "あなたはまだプロフィールを書いていません。個性豊かのユーザーを持つCindyでは、それが一大事です！今すぐ何かを書いて自分を紹介しましょう！",
   "user.description": "ユーザープロフィールです",
   "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
   "user.profileOf": "{nickname} のプロフィール",
   "user.title": "ユーザープロフィール",
+  "users.description": "Cindyのユーザーたち",
+  "users.header": "ユーザー一覧",
+  "users.title": "ユーザー一覧",
   "webNotify.deniedMessage": "プッシュ通知があなたのブラウザー設定により禁止されたようです。新しい問題や質問がある時、Cindyはあなたにプッシュ通知を送れなくなります。\nもしプッシュ通知が邪魔だったら、Cindyのタブを閉じてください。Cindyはタブが閉じた時、あなたにプッシュ通知を送ることはありません。",
   "webNotify.memoUpdated": "問題「{puzzle}」のメモが更新されました",
   "webNotify.newDialogueAdded": "新しい質問があります",
