Add search page

--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,8 @@
   "common.notExist": "Page Not Exists",
   "common.patron": "Patron",
   "common.prev": "Prev",
+  "common.reset": "Reset",
+  "common.search": "Search",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
@@ -140,6 +142,9 @@
   "ranking.weeklyRanking": "Weekly Ranking",
   "replay.description": "Replay Puzzle {puzzleTitle} in Cindy",
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
+  "search.description": "Search old puzzles in Cindy",
+  "search.header": "Search Puzzles",
+  "search.title": "Search old puzzles",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
   "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
