--- a/lang/ja.json
+++ b/lang/ja.json
@@ -40,6 +40,8 @@
   "common.notExist": "このページは存在しません",
   "common.patron": "パトロン",
   "common.prev": "＜前",
+  "common.reset": "リセット",
+  "common.search": "検索",
   "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
   "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
@@ -140,6 +142,9 @@
   "ranking.weeklyRanking": "週間ランキング",
   "replay.description": "古い名作をリプレイしましょう",
   "replay.title": "問題リプレイ",
+  "search.description": "Cindyの過去問を見よう！",
+  "search.header": "過去問検索",
+  "search.title": "過去問検索",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
   "showcases.puzzle.a2": "NO",
   "showcases.puzzle.content": "消しゴムといえば、書いた文字を消すための文房具であることは言うまでもないことだ。\n\nだがAは、“まだ何も書かれていない白紙にメッセージを残すため”、消しゴムを手に持った。\n\n一体なぜ？",
