--- a/lang/en.json
+++ b/lang/en.json
@@ -26,11 +26,13 @@
   "awards.title": "Awards Page",
   "common.all": "All",
   "common.apply": "Apply",
+  "common.asc": "Ascending",
   "common.back": "Back",
   "common.change": "Change",
   "common.close": "Close",
   "common.continue": "Continue",
   "common.default": "Default",
+  "common.desc": "Descending",
   "common.editTimes": "[Edited ({count})]",
   "common.jump": "Jump",
   "common.loadMore": "Load More",
@@ -42,6 +44,7 @@
   "common.prev": "Prev",
   "common.reset": "Reset",
   "common.search": "Search",
+  "common.sort": "Sort",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
   "components.awardCheck.goodQuestionCountReaches": "Congratulations! You've got {count} good questions and can get a new award!",
@@ -144,6 +147,10 @@
   "replay.title": "Replay Puzzle {puzzleTitle} | Cindy",
   "search.description": "Search old puzzles in Cindy",
   "search.header": "Search Puzzles",
+  "search.order_bookmarkCount": "Bookmark Count",
+  "search.order_commentCount": "Comment Count",
+  "search.order_starCount": "Star Count",
+  "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
