--- a/lang/ja.json
+++ b/lang/ja.json
@@ -26,11 +26,13 @@
   "awards.title": "称号一覧ページ",
   "common.all": "すべて",
   "common.apply": "適用",
+  "common.asc": "昇順",
   "common.back": "戻る",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.continue": "続く",
   "common.default": "デフォルト",
+  "common.desc": "降順",
   "common.editTimes": "編集済み({count})",
   "common.jump": "移動",
   "common.loadMore": "もっと見る",
@@ -42,6 +44,7 @@
   "common.prev": "＜前",
   "common.reset": "リセット",
   "common.search": "検索",
+  "common.sort": "並び替え",
   "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
   "components.awardCheck.goodQuestionCountReaches": "おめでとうございます！あなたの良質数が {count} に達し、新しい称号を獲得できるようになりました！",
@@ -144,6 +147,10 @@
   "replay.title": "問題リプレイ",
   "search.description": "Cindyの過去問を見よう！",
   "search.header": "過去問検索",
+  "search.order_bookmarkCount": "ブクマ数",
+  "search.order_commentCount": "コメント数",
+  "search.order_starCount": "スター投票数",
+  "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
   "showcases.puzzle.a2": "NO",
