--- a/lang/en.json
+++ b/lang/en.json
@@ -88,6 +88,7 @@
   "components.puzzle.status_hidden": "hidden",
   "components.puzzle.status_solved": "solved",
   "components.puzzle.status_undergoing": "undergoing",
+  "components.puzzle.tags": "Tags",
   "components.puzzle.title": "Title",
   "components.puzzle.yami": "Yami",
   "components.puzzle.yami_longtermYami": "Long-term Yami",
@@ -163,6 +164,12 @@
   "stamp.namespace_chef": "Chef",
   "stamp.namespace_kameo": "Kameo",
   "stamp.namespace_puzzle": "Puzzle",
+  "tag.description": "Puzzles with tag",
+  "tag.descriptionWithName": "Puzzles with tag \"{name}\"",
+  "tag.header": "Tag",
+  "tag.headerWithName": "Tag: {name}",
+  "tag.title": "Tag Page",
+  "tag.titleWithName": "Tag: {name}",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
   "toolbar.users": "Users",
