--- a/lang/ja.json
+++ b/lang/ja.json
@@ -88,6 +88,7 @@
   "components.puzzle.status_hidden": "非公開",
   "components.puzzle.status_solved": "解決済み",
   "components.puzzle.status_undergoing": "未解決",
+  "components.puzzle.tags": "タグ",
   "components.puzzle.title": "タイトル",
   "components.puzzle.yami": "闇スープ",
   "components.puzzle.yami_longtermYami": "闇＆常駐",
@@ -163,6 +164,12 @@
   "stamp.namespace_chef": "シェフ",
   "stamp.namespace_kameo": "カメオ",
   "stamp.namespace_puzzle": "問題パネル",
+  "tag.description": "このタグを含むすべての問題",
+  "tag.descriptionWithName": "タグ：{name} が含まれるすべての問題",
+  "tag.header": "タグ",
+  "tag.headerWithName": "タグ：{name}",
+  "tag.title": "タグページ",
+  "tag.titleWithName": "タグ：{name}",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.users": "ユーザー",
