Add content to star popover

--- a/lang/en.json
+++ b/lang/en.json
@@ -43,6 +43,8 @@
   "common.patron": "Patron",
   "common.prev": "Prev",
   "common.reset": "Reset",
+  "common.saved": "Saved!",
+  "common.saving": "Saving...",
   "common.search": "Search",
   "common.sort": "Sort",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
@@ -59,6 +61,7 @@
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
   "components.chat.noDescription": "This chatroom does not have a description.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
+  "components.puzzle.addStars": "Add Stars",
   "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
   "components.puzzle.comment": "Comment",
@@ -83,6 +86,8 @@
   "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
   "components.puzzle.star": "Star",
+  "components.puzzle.starUsers": "{users} add stars to this puzzle.",
+  "components.puzzle.starUsersWithExtra": "{users} and {count} users add stars to this puzzle.",
   "components.puzzle.status_dazed": "dazed",
   "components.puzzle.status_forbidden": "forbidden",
   "components.puzzle.status_hidden": "hidden",
@@ -93,6 +98,7 @@
   "components.puzzle.yami": "Yami",
   "components.puzzle.yami_longtermYami": "Long-term Yami",
   "components.puzzle.yami_yami": "Yami",
+  "components.puzzle.yourStars": "Your Stars",
   "components.user.anonymousUser": "Anonymous User",
   "components.user.commentCount": "Comments",
   "components.user.dialogueCount": "Dialogues",
