--- a/lang/ja.json
+++ b/lang/ja.json
@@ -43,6 +43,8 @@
   "common.patron": "パトロン",
   "common.prev": "＜前",
   "common.reset": "リセット",
+  "common.saved": "セーブしました。",
+  "common.saving": "セーブ中・・・",
   "common.search": "検索",
   "common.sort": "並び替え",
   "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
@@ -59,6 +61,7 @@
   "components.chat.favoriteChatrooms": "お気に入りチャンネル",
   "components.chat.noDescription": "このチャンネルは説明がありません。",
   "components.chat.notExistDescription": "このチャットルームは存在しません",
+  "components.puzzle.addStars": "あなたのスター",
   "components.puzzle.anonymous": "匿名",
   "components.puzzle.bookmark": "ブクマ",
   "components.puzzle.comment": "コメント",
@@ -83,6 +86,8 @@
   "components.puzzle.solution": "解説文",
   "components.puzzle.solvedAt": "解決時間",
   "components.puzzle.star": "スター",
+  "components.puzzle.starUsers": "{users} がこの問題にスターをつけました。",
+  "components.puzzle.starUsersWithExtra": "{users} とその他 {count} 名のユーザーがこの問題にスターをつけました。",
   "components.puzzle.status_dazed": "迷宮入り",
   "components.puzzle.status_forbidden": "強制非公開",
   "components.puzzle.status_hidden": "非公開",
@@ -93,6 +98,7 @@
   "components.puzzle.yami": "闇スープ",
   "components.puzzle.yami_longtermYami": "闇＆常駐",
   "components.puzzle.yami_yami": "闇スープ",
+  "components.puzzle.yourStars": "あなたのスター",
   "components.user.anonymousUser": "謎の料理人",
   "components.user.commentCount": "コメント数",
   "components.user.dialogueCount": "質問数",
