--- a/lang/en.json
+++ b/lang/en.json
@@ -43,9 +43,11 @@
   "common.patron": "Patron",
   "common.prev": "Prev",
   "common.reset": "Reset",
+  "common.save": "Save",
   "common.saved": "Saved!",
   "common.saving": "Saving...",
   "common.search": "Search",
+  "common.send": "Send",
   "common.sort": "Sort",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
@@ -61,6 +63,7 @@
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
   "components.chat.noDescription": "This chatroom does not have a description.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
+  "components.puzzle.addComment": "Add Comment",
   "components.puzzle.addStars": "Add Stars",
   "components.puzzle.anonymous": "Anonymous",
   "components.puzzle.bookmark": "Bookmark",
@@ -85,6 +88,8 @@
   "components.puzzle.replay": "Replay",
   "components.puzzle.solution": "Solution",
   "components.puzzle.solvedAt": "Solved At",
+  "components.puzzle.spoiler": "Spoiler",
+  "components.puzzle.spoilerWarning": "This comment may contain spoiler contents.",
   "components.puzzle.star": "Star",
   "components.puzzle.starUsers": "{users} add stars to this puzzle.",
   "components.puzzle.starUsersWithExtra": "{users} and {count} users add stars to this puzzle.",
@@ -98,6 +103,7 @@
   "components.puzzle.yami": "Yami",
   "components.puzzle.yami_longtermYami": "Long-term Yami",
   "components.puzzle.yami_yami": "Yami",
+  "components.puzzle.yourComment": "Your Comment",
   "components.puzzle.yourStars": "Your Stars",
   "components.user.anonymousUser": "Anonymous User",
   "components.user.commentCount": "Comments",
