Add bookmark and star tab to profile

--- a/lang/en.json
+++ b/lang/en.json
@@ -63,6 +63,7 @@
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
   "components.chat.noDescription": "This chatroom does not have a description.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
+  "components.puzzle.addBookmarks": "Add Bookmarks",
   "components.puzzle.addComment": "Add Comment",
   "components.puzzle.addStars": "Add Stars",
   "components.puzzle.anonymous": "Anonymous",
@@ -103,12 +104,14 @@
   "components.puzzle.yami": "Yami",
   "components.puzzle.yami_longtermYami": "Long-term Yami",
   "components.puzzle.yami_yami": "Yami",
+  "components.puzzle.yourBookmarks": "Your Bookmarks",
   "components.puzzle.yourComment": "Your Comment",
   "components.puzzle.yourStars": "Your Stars",
   "components.user.anonymousUser": "Anonymous User",
   "components.user.commentCount": "Comments",
   "components.user.dialogueCount": "Dialogues",
   "components.user.goodQuestionCount": "Good Questions",
+  "components.user.hideBookmark": "Hide Bookmark",
   "components.user.profile": "Profile",
   "components.user.puzzleCount": "Puzzles",
   "components.user.recvCommentCount": "Comments Received",
@@ -126,6 +129,7 @@
   "puzzle.creator": "Creator",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
+  "puzzle.goToPuzzlePage": "Go To Puzzle Page",
   "puzzle.grotesqueWarning": "WARNING! This puzzle has grotesque descriptions",
   "puzzle.hiddenContents": "This puzzle is not open to public access.",
   "puzzle.memoFromCreator": "Memo from creator",
@@ -190,6 +194,8 @@
   "user.description": "User Profile in Cindy",
   "user.profileIsEmpty": "This user does not have a profile",
   "user.profileOf": "{nickname}'s Profile",
+  "user.tab_info": "Info",
+  "user.tab_puzzles": "Puzzles",
   "user.title": "User Profile",
   "users.description": "Recently registered users in Cindy",
   "users.header": "Users",
