--- a/lang/ja.json
+++ b/lang/ja.json
@@ -63,6 +63,7 @@
   "components.chat.favoriteChatrooms": "お気に入りチャンネル",
   "components.chat.noDescription": "このチャンネルは説明がありません。",
   "components.chat.notExistDescription": "このチャットルームは存在しません",
+  "components.puzzle.addBookmarks": "ブクマを追加する",
   "components.puzzle.addComment": "コメントを残す",
   "components.puzzle.addStars": "あなたのスター",
   "components.puzzle.anonymous": "匿名",
@@ -103,12 +104,14 @@
   "components.puzzle.yami": "闇スープ",
   "components.puzzle.yami_longtermYami": "闇＆常駐",
   "components.puzzle.yami_yami": "闇スープ",
+  "components.puzzle.yourBookmarks": "あなたのブクマ",
   "components.puzzle.yourComment": "あなたのコメント",
   "components.puzzle.yourStars": "あなたのスター",
   "components.user.anonymousUser": "謎の料理人",
   "components.user.commentCount": "コメント数",
   "components.user.dialogueCount": "質問数",
   "components.user.goodQuestionCount": "良い質問数",
+  "components.user.hideBookmark": "ブクマ非公開",
   "components.user.profile": "プロフィール",
   "components.user.puzzleCount": "出題数",
   "components.user.recvCommentCount": "コメント獲得数",
@@ -126,6 +129,7 @@
   "puzzle.creator": "出題者",
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
+  "puzzle.goToPuzzlePage": "問題ページへ",
   "puzzle.grotesqueWarning": "注意！この問題は残酷な描写があります。続きますか？",
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
   "puzzle.memoFromCreator": "出題者からのメモ",
@@ -190,6 +194,8 @@
   "user.description": "ユーザープロフィールです",
   "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
   "user.profileOf": "{nickname} のプロフィール",
+  "user.tab_info": "基本情報",
+  "user.tab_puzzles": "問題",
   "user.title": "ユーザープロフィール",
   "users.description": "Cindyのユーザーたち",
   "users.header": "ユーザー一覧",
