--- a/lang/en.json
+++ b/lang/en.json
@@ -190,6 +190,18 @@
   "toolbar.puzzle": "Puzzle",
   "toolbar.users": "Users",
   "toolbar.wiki": "Wiki",
+  "tooltip.bold": "Bold",
+  "tooltip.collapse": "Collapse",
+  "tooltip.delete": "Delete",
+  "tooltip.expand": "Expand",
+  "tooltip.href": "Link",
+  "tooltip.italic": "Italic",
+  "tooltip.picture": "Picture",
+  "tooltip.preview": "Preview",
+  "tooltip.scrollToBottom": "Scroll To Bottom",
+  "tooltip.scrollToTop": "Scroll To Top",
+  "tooltip.stamp": "Stamp",
+  "tooltip.underline": "Underline",
   "user.currentUserProfileIsEmpty": "It seems that you haven't written a profile yet. Introduce your self in a few words now!",
   "user.description": "User Profile in Cindy",
   "user.profileIsEmpty": "This user does not have a profile",
