--- a/lang/ja.json
+++ b/lang/ja.json
@@ -190,6 +190,18 @@
   "toolbar.puzzle": "問題",
   "toolbar.users": "ユーザー",
   "toolbar.wiki": "Cindy+Wiki",
+  "tooltip.bold": "太文字",
+  "tooltip.collapse": "縮小表示",
+  "tooltip.delete": "取り消し線",
+  "tooltip.expand": "拡大表示",
+  "tooltip.href": "ハイパーリンク",
+  "tooltip.italic": "斜体",
+  "tooltip.picture": "画像",
+  "tooltip.preview": "プレビュー",
+  "tooltip.scrollToBottom": "下へ",
+  "tooltip.scrollToTop": "上へ",
+  "tooltip.stamp": "スタンプ",
+  "tooltip.underline": "下線",
   "user.currentUserProfileIsEmpty": "あなたはまだプロフィールを書いていません。個性豊かのユーザーを持つCindyでは、それが一大事です！今すぐ何かを書いて自分を紹介しましょう！",
   "user.description": "ユーザープロフィールです",
   "user.profileIsEmpty": "このユーザーはまだプロフィールを書いていません。",
