Change toolbar user to dropdown

--- a/lang/en.json
+++ b/lang/en.json
@@ -188,6 +188,7 @@
   "tag.titleWithName": "Tag: {name}",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
+  "toolbar.settings": "Settings",
   "toolbar.users": "Users",
   "toolbar.wiki": "Wiki",
   "tooltip.bold": "Bold",
