--- a/lang/ja.json
+++ b/lang/ja.json
@@ -188,6 +188,7 @@
   "tag.titleWithName": "タグ：{name}",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
+  "toolbar.settings": "設定",
   "toolbar.users": "ユーザー",
   "toolbar.wiki": "Cindy+Wiki",
   "tooltip.bold": "太文字",
