Add settings modal, add input config to chat

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -40,6 +40,7 @@
   "common.next": "次＞",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
+  "common.others": "その他",
   "common.patron": "パトロン",
   "common.prev": "＜前",
   "common.reset": "リセット",
@@ -170,6 +171,13 @@
   "search.order_starCount": "スター投票数",
   "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
+  "setting.editQuestionTrigger": "質問（編集）",
+  "setting.puzzleGenreImg": "ジャンルアイコン",
+  "setting.sendAnswerTrigger": "回答",
+  "setting.sendChatTrigger": "チャット",
+  "setting.sendMessageTrigger": "メッセージ送信キー",
+  "setting.sendQuestionTrigger": "質問",
+  "setting.settings": "設定",
   "showcases.puzzle.a1": "YES　ですが、何色でも成立します。でも白色で考えてください！",
   "showcases.puzzle.a2": "NO",
   "showcases.puzzle.content": "消しゴムといえば、書いた文字を消すための文房具であることは言うまでもないことだ。\n\nだがAは、“まだ何も書かれていない白紙にメッセージを残すため”、消しゴムを手に持った。\n\n一体なぜ？",
