--- a/lang/en.json
+++ b/lang/en.json
@@ -40,6 +40,7 @@
   "common.next": "Next",
   "common.none": "None",
   "common.notExist": "Page Not Exists",
+  "common.others": "Others",
   "common.patron": "Patron",
   "common.prev": "Prev",
   "common.reset": "Reset",
@@ -170,6 +171,13 @@
   "search.order_starCount": "Star Count",
   "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
+  "setting.editQuestionTrigger": "Edit Question",
+  "setting.puzzleGenreImg": "Display Genre Image",
+  "setting.sendAnswerTrigger": "Send Answer",
+  "setting.sendChatTrigger": "Send Chat Message",
+  "setting.sendMessageTrigger": "Send Message Trigger",
+  "setting.sendQuestionTrigger": "Send Question",
+  "setting.settings": "Settings",
   "showcases.puzzle.a1": "Yes!",
   "showcases.puzzle.a2": "No",
   "showcases.puzzle.content": "Rubbers are usually used to clear texts, while A take the rubber with the intention to write texts.\n\nWhy?",
