Add setting to right aside

--- a/lang/en.json
+++ b/lang/en.json
@@ -28,6 +28,7 @@
   "common.apply": "Apply",
   "common.asc": "Ascending",
   "common.back": "Back",
+  "common.big": "Big",
   "common.change": "Change",
   "common.close": "Close",
   "common.continue": "Continue",
@@ -49,6 +50,7 @@
   "common.saving": "Saving...",
   "common.search": "Search",
   "common.send": "Send",
+  "common.small": "Small",
   "common.sort": "Sort",
   "components.awardCheck.getAward": "Congratulations! You've got a new award {name}!",
   "components.awardCheck.goToAwardsPage": "Go to awards page",
@@ -173,6 +175,7 @@
   "search.title": "Search old puzzles",
   "setting.editQuestionTrigger": "Edit Question",
   "setting.puzzleGenreImg": "Display Genre Image",
+  "setting.rightAsideMini": "(Puzzle Page) Floating box size",
   "setting.sendAnswerTrigger": "Send Answer",
   "setting.sendChatTrigger": "Send Chat Message",
   "setting.sendMessageTrigger": "Send Message Trigger",
