--- a/lang/ja.json
+++ b/lang/ja.json
@@ -28,6 +28,7 @@
   "common.apply": "適用",
   "common.asc": "昇順",
   "common.back": "戻る",
+  "common.big": "大",
   "common.change": "変更",
   "common.close": "閉じる",
   "common.continue": "続く",
@@ -49,6 +50,7 @@
   "common.saving": "セーブ中・・・",
   "common.search": "検索",
   "common.send": "送信",
+  "common.small": "小",
   "common.sort": "並び替え",
   "components.awardCheck.getAward": "おめでとうございます！あなたが新しい称号 {name} を獲得しました！今すぐセットしましょう！",
   "components.awardCheck.goToAwardsPage": "称号一覧ページへ",
@@ -173,6 +175,7 @@
   "search.title": "過去問検索",
   "setting.editQuestionTrigger": "質問（編集）",
   "setting.puzzleGenreImg": "ジャンルアイコン",
+  "setting.rightAsideMini": "（問題ページ）浮きパネルサイズ",
   "setting.sendAnswerTrigger": "回答",
   "setting.sendChatTrigger": "チャット",
   "setting.sendMessageTrigger": "メッセージ送信キー",
