Add confirm to tag delete, remove caching from tag input

--- a/lang/en.json
+++ b/lang/en.json
@@ -31,6 +31,7 @@
   "common.big": "Big",
   "common.change": "Change",
   "common.close": "Close",
+  "common.confirm": "Confirm",
   "common.continue": "Continue",
   "common.default": "Default",
   "common.desc": "Descending",
@@ -130,6 +131,7 @@
   "home.start": "Start",
   "home.title": "Cindy: A lateral thinking salon for every one!",
   "puzzle.creator": "Creator",
+  "puzzle.deleteTagConfirm": "Your are going to delete this tag \"{tag}\". This operation cannot be reverted. Are you sure?",
   "puzzle.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
   "puzzle.forbiddenContents": "This puzzle has violated rules in Cindy and is forbidden by administrator.",
   "puzzle.goToPuzzlePage": "Go To Puzzle Page",
