--- a/lang/ja.json
+++ b/lang/ja.json
@@ -31,6 +31,7 @@
   "common.big": "大",
   "common.change": "変更",
   "common.close": "閉じる",
+  "common.confirm": "確認",
   "common.continue": "続く",
   "common.default": "デフォルト",
   "common.desc": "降順",
@@ -130,6 +131,7 @@
   "home.start": "ゲームスタート",
   "home.title": "みんなで遊ぶ水平思考ゲーム「ウミガメのスープ」",
   "puzzle.creator": "出題者",
+  "puzzle.deleteTagConfirm": "あなたはこのタグ「{tag}」を削除しようとしています。この操作は撤回することができません。続きますか？",
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.goToPuzzlePage": "問題ページへ",
