Add notification to settings; fix translation grammars

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -32,10 +32,12 @@
   "common.change": "変更",
   "common.close": "閉じる",
   "common.confirm": "確認",
-  "common.continue": "続く",
+  "common.continue": "続行",
   "common.default": "デフォルト",
   "common.desc": "降順",
+  "common.doNotNotifyAgain": "以後表示しない",
   "common.editTimes": "編集済み({count})",
+  "common.enable": "有効にする",
   "common.jump": "移動",
   "common.loadMore": "もっと見る",
   "common.loading": "ロード中です・・・",
@@ -131,7 +133,7 @@
   "home.start": "ゲームスタート",
   "home.title": "みんなで遊ぶ水平思考ゲーム「ウミガメのスープ」",
   "puzzle.creator": "出題者",
-  "puzzle.deleteTagConfirm": "あなたはこのタグ「{tag}」を削除しようとしています。この操作は撤回することができません。続きますか？",
+  "puzzle.deleteTagConfirm": "あなたはこのタグ「{tag}」を削除しようとしています。この操作は撤回することができません。続けますか？",
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.goToPuzzlePage": "問題ページへ",
@@ -176,6 +178,8 @@
   "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
   "setting.editQuestionTrigger": "質問（編集）",
+  "setting.notification": "通知設定",
+  "setting.pushNotification": "プッシュ通知",
   "setting.puzzleGenreImg": "ジャンルアイコン",
   "setting.rightAsideMini": "（問題ページ）浮きパネルサイズ",
   "setting.sendAnswerTrigger": "回答",
