--- a/lang/en.json
+++ b/lang/en.json
@@ -35,7 +35,9 @@
   "common.continue": "Continue",
   "common.default": "Default",
   "common.desc": "Descending",
+  "common.doNotNotifyAgain": "Do not notify me again",
   "common.editTimes": "[Edited ({count})]",
+  "common.enable": "Enable",
   "common.jump": "Jump",
   "common.loadMore": "Load More",
   "common.loading": "Loading...",
@@ -176,6 +178,8 @@
   "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
   "setting.editQuestionTrigger": "Edit Question",
+  "setting.notification": "Notification",
+  "setting.pushNotification": "Push Notification",
   "setting.puzzleGenreImg": "Display Genre Image",
   "setting.rightAsideMini": "(Puzzle Page) Floating box size",
   "setting.sendAnswerTrigger": "Send Answer",
