--- a/lang/en.json
+++ b/lang/en.json
@@ -124,6 +124,7 @@
   "components.user.trueAnswerCount": "True Answers",
   "components.user.useraward": "Award",
   "components.user.withAnonymousPatrons": ", with {count} anonymous patrons.",
+  "dm.directMessage": "Direct Message",
   "home.bestPuzzleOfLastMonth": "Most Valuable Puzzles of the Last Month",
   "home.body": "Cindy is an active community for chatting lateral thinking problems.",
   "home.description": "Find interesting lateral thinking puzzles here, share with your friends, and even create your own lateral thinking puzzle in minites!",
