--- a/lang/en.json
+++ b/lang/en.json
@@ -181,6 +181,7 @@
   "setting.rightAsideMini": "(Puzzle Page) Floating box size",
   "setting.sendAnswerTrigger": "Send Answer",
   "setting.sendChatTrigger": "Send Chat Message",
+  "setting.sendDirectmessageTrigger": "Send Direct Message",
   "setting.sendMessageTrigger": "Send Message Trigger",
   "setting.sendQuestionTrigger": "Send Question",
   "setting.settings": "Settings",
@@ -229,6 +230,7 @@
   "users.title": "Users Page",
   "webNotify.deniedMessage": "Notification seems to be disabled by your browser settings. Cindy will not send you messages.\nIf you find the notifications annoying, simply close the Cindy tab instead of block it. Cindy will not send you notifications when Cindy tab is not open.",
   "webNotify.memoUpdated": "Memo for Puzzle \"{puzzle}\" is updated",
+  "webNotify.newDMReceived": "You've just received a direct message from {user}",
   "webNotify.newDialogueAdded": "New Question Added",
   "webNotify.newHintAdded": "New Hint Added",
   "webNotify.newPuzzleAdded": "New Puzzle Added",
