--- a/lang/ja.json
+++ b/lang/ja.json
@@ -181,6 +181,7 @@
   "setting.rightAsideMini": "（問題ページ）浮きパネルサイズ",
   "setting.sendAnswerTrigger": "回答",
   "setting.sendChatTrigger": "チャット",
+  "setting.sendDirectmessageTrigger": "ダイレクトメッセージ",
   "setting.sendMessageTrigger": "メッセージ送信キー",
   "setting.sendQuestionTrigger": "質問",
   "setting.settings": "設定",
@@ -229,6 +230,7 @@
   "users.title": "ユーザー一覧",
   "webNotify.deniedMessage": "プッシュ通知があなたのブラウザー設定により禁止されたようです。新しい問題や質問がある時、Cindyはあなたにプッシュ通知を送れなくなります。\nもしプッシュ通知が邪魔だったら、Cindyのタブを閉じてください。Cindyはタブが閉じた時、あなたにプッシュ通知を送ることはありません。",
   "webNotify.memoUpdated": "問題「{puzzle}」のメモが更新されました",
+  "webNotify.newDMReceived": "新しいダイレクトメッセージがあります",
   "webNotify.newDialogueAdded": "新しい質問があります",
   "webNotify.newHintAdded": "新しいヒントがあります",
   "webNotify.newPuzzleAdded": "新しい問題が出題されました",
