Add more awards

--- a/lang/en.json
+++ b/lang/en.json
@@ -19,9 +19,15 @@
   "auth.username": "Username",
   "awards.description": "Get awards for use in Cindy!",
   "awards.group_goodQuestionCount": "Good Question Count Related",
+  "awards.group_mixed": "Mixed",
   "awards.group_puzzleCount": "Puzzle Count Related",
+  "awards.group_puzzleGenreCount": "Puzzle Count By Genre",
+  "awards.group_puzzleStarCount": "Star Count By Puzzle",
   "awards.group_questionCount": "Question Count Related",
+  "awards.group_starSum": "Star Sum Related",
   "awards.group_trueAnswerCount": "True Answer Count Related",
+  "awards.group_yamiPuzzleCount": "Yami Count Related",
+  "awards.group_yamiPuzzleMaxDialoguesCount": "Yami Question Count Related",
   "awards.header": "Awards",
   "awards.title": "Awards Page",
   "common.all": "All",
