--- a/lang/ja.json
+++ b/lang/ja.json
@@ -19,9 +19,15 @@
   "auth.username": "ユーザー名",
   "awards.description": "称号をゲットしよう！",
   "awards.group_goodQuestionCount": "良質数関連",
+  "awards.group_mixed": "複数条件あり",
   "awards.group_puzzleCount": "出題数関連",
+  "awards.group_puzzleGenreCount": "ジャンル別出題数関連",
+  "awards.group_puzzleStarCount": "問題スター数関連",
   "awards.group_questionCount": "質問数関連",
+  "awards.group_starSum": "通算スター数関連",
   "awards.group_trueAnswerCount": "正解数関連",
+  "awards.group_yamiPuzzleCount": "闇出題数関連",
+  "awards.group_yamiPuzzleMaxDialoguesCount": "闇問題質問数関連",
   "awards.header": "称号一覧",
   "awards.title": "称号一覧ページ",
   "common.all": "すべて",
