--- a/lang/ja.json
+++ b/lang/ja.json
@@ -47,6 +47,7 @@
   "common.jump": "移動",
   "common.loadMore": "もっと見る",
   "common.loading": "ロード中です・・・",
+  "common.loginOrSignup": "参加するには {login} または {signup} してください",
   "common.next": "次＞",
   "common.none": "なし",
   "common.notExist": "このページは存在しません",
