Add current viewers

--- a/lang/en.json
+++ b/lang/en.json
@@ -217,6 +217,7 @@
   "toolbar.puzzle": "Puzzle",
   "toolbar.settings": "Settings",
   "toolbar.users": "Users",
+  "toolbar.usersOnline": "Online Users: {count}",
   "toolbar.wiki": "Wiki",
   "tooltip.bold": "Bold",
   "tooltip.collapse": "Collapse",
