--- a/lang/ja.json
+++ b/lang/ja.json
@@ -135,6 +135,9 @@
   "components.user.useraward": "称号",
   "components.user.withAnonymousPatrons": "と 匿名パトロン {count} 名",
   "dm.directMessage": "ダイレクトメッセージ",
+  "eula.description": "Cindy利用規約",
+  "eula.header": "利用規約",
+  "eula.title": "利用規約",
   "home.bestPuzzleOfLastMonth": "先月スター数獲得上位問題",
   "home.body": "Cindy は水平思考パズル「ウミガメのスープ」のリアルタイム出題サイト。\nウミガメのスープは複数ユーザーでプレイする水平思考型推理ゲームです。\nYES/NOで答えることのできる質問をして不可解な謎を一緒に解き明かして行きましょう。",
   "home.description": "リアルタイムでウミガメのスープ問題を遊ぼう！",
@@ -213,6 +216,7 @@
   "tag.headerWithName": "タグ：{name}",
   "tag.title": "タグページ",
   "tag.titleWithName": "タグ：{name}",
+  "toolbar.eula": "利用規約",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
   "toolbar.settings": "設定",
