--- a/lang/en.json
+++ b/lang/en.json
@@ -155,13 +155,16 @@
   "puzzle.notExistDescription": "This puzzle does not exist!",
   "puzzle.putQuestion": "Ask",
   "puzzle.putSolution": "Put Solution",
+  "puzzle.putSolutionConfirm": "You attempt to put solution. Everyone can see your solution then and you cannot edit the solution any more. This operation cannot be reverted. Continue?",
   "puzzle.setGrotesque": "Show grotesque warning",
   "puzzle.setHidden": "Set As Hidden",
+  "puzzle.setHiddenConfirm": "You attempt to set the puzzle hidden to public. This operation will forcefully solve the puzzle and mark it as solved. You will NOT be able to change the puzzle to undergoing state. Continue?",
   "puzzle.setYami": "Make this puzzle yami",
   "puzzle.solveit": "Can you solve the puzzle?",
   "puzzle.title": "Puzzles",
   "puzzle.unsetGrotesque": "Hide grotesque warning",
   "puzzle.unsetHidden": "Make the puzzle open to public",
+  "puzzle.unsetHiddenConfirm": "You attempt to set the puzzle open to public. This operation will mark the puzzle as solved and anyone viewing this page will see the puzzle contents and solution INSTANTLY. You can make this puzzle hidden again afterwards. Continue?",
   "puzzle.unsetYami": "Make this puzzle non-yami",
   "puzzle.waitForAnswer": "Wait for answer...",
   "puzzles.description": "Playing lateral thinking puzzles online, and browsering all kinds of lateral thinking puzzles. Tons of lateral thinking puzzles are waiting for you!",
