--- a/lang/ja.json
+++ b/lang/ja.json
@@ -149,19 +149,22 @@
   "puzzle.description": "問題の詳細情報",
   "puzzle.forbiddenContents": "この問題は Cindy のルールを違反しています。管理人によって閉鎖されました。",
   "puzzle.goToPuzzlePage": "問題ページへ",
-  "puzzle.grotesqueWarning": "注意！この問題は残酷な描写があります。続きますか？",
+  "puzzle.grotesqueWarning": "注意！この問題は残酷な描写があります。続けますか？",
   "puzzle.hiddenContents": "この問題は非公開設定されています。この問題の内容を閲覧することはできません。",
   "puzzle.memoFromCreator": "出題者からのメモ",
   "puzzle.notExistDescription": "この問題は存在しません",
   "puzzle.putQuestion": "質問",
   "puzzle.putSolution": "解説を出す",
+  "puzzle.putSolutionConfirm": "あなたは解説を出そうとしています。解説を出すと、このページにいる全員が即時に解説を見れるようになりますが、あなたは解説を編集することができなくなります。この操作は撤回することができません。続けますか？",
   "puzzle.setGrotesque": "グロ注意を表示する",
   "puzzle.setHidden": "非公開にする",
+  "puzzle.setHiddenConfirm": "あなたは問題を非公開にしようとしています。問題を非公開にすると、他の人が問題の内容を見れなくなりますが、問題が強制的に解決され、未解決状態に戻すことができません。続けますか？",
   "puzzle.setYami": "闇スープにする",
   "puzzle.solveit": "この謎、解けますか？",
   "puzzle.title": "問題ページ",
   "puzzle.unsetGrotesque": "グロ注意を非表示にする",
   "puzzle.unsetHidden": "問題を公開する",
+  "puzzle.unsetHiddenConfirm": "あなたはこの問題を公開しようとしています。非公開問題を公開すると、自動的に解決状態になります。このページを閲覧している人は即時に問題の内容を見れるようになる恐れがあります。公開したあとでも問題を非公開にすることができます。続けますか？",
   "puzzle.unsetYami": "闇スープにしない",
   "puzzle.waitForAnswer": "回答はまだです・・・",
   "puzzles.description": "遊びたいパズルを選ぼう。以前出題された問題を閲覧しよう。数多の水平思考パズルがあなたを待っています！",
