--- a/lang/en.json
+++ b/lang/en.json
@@ -75,6 +75,8 @@
   "components.chat.deleteFromFavoriteChatrooms": "Delete From Favorite Chatrooms",
   "components.chat.favoriteChatrooms": "My Favorite Chatrooms",
   "components.chat.noDescription": "This chatroom does not have a description.",
+  "components.chat.noLogs": "There are no logs here",
+  "components.chat.noSelfDM": "You cannot send message to yourself.",
   "components.chat.notExistDescription": "This chatroom does not exist!",
   "components.puzzle.addBookmarks": "Add Bookmarks",
   "components.puzzle.addComment": "Add Comment",
