--- a/lang/en.json
+++ b/lang/en.json
@@ -222,6 +222,12 @@
   "tag.headerWithName": "Tag: {name}",
   "tag.title": "Tag Page",
   "tag.titleWithName": "Tag: {name}",
+  "tags.description": "Puzzle tags in Cindy!",
+  "tags.header": "Tags",
+  "tags.tagCreated": "Created Time",
+  "tags.tagName": "Tag Name",
+  "tags.tagPuzzleCount": "Puzzle Count",
+  "tags.title": "Tags",
   "toolbar.eula": "EULA",
   "toolbar.home": "Home",
   "toolbar.puzzle": "Puzzle",
