--- a/lang/ja.json
+++ b/lang/ja.json
@@ -222,6 +222,12 @@
   "tag.headerWithName": "タグ：{name}",
   "tag.title": "タグページ",
   "tag.titleWithName": "タグ：{name}",
+  "tags.description": "問題タグ一覧",
+  "tags.header": "タグ一覧",
+  "tags.tagCreated": "タグ作成時間",
+  "tags.tagName": "タグ名",
+  "tags.tagPuzzleCount": "問題数",
+  "tags.title": "タグ一覧",
   "toolbar.eula": "利用規約",
   "toolbar.home": "ホーム",
   "toolbar.puzzle": "問題",
