Add multicol option to settings

--- a/lang/ja.json
+++ b/lang/ja.json
@@ -41,6 +41,7 @@
   "common.continue": "続行",
   "common.default": "デフォルト",
   "common.desc": "降順",
+  "common.display": "ディスプレイ",
   "common.doNotNotifyAgain": "以後表示しない",
   "common.editTimes": "編集済み({count})",
   "common.enable": "有効にする",
@@ -196,6 +197,7 @@
   "search.order_starSum": "スター総計数",
   "search.title": "過去問検索",
   "setting.editQuestionTrigger": "質問（編集）",
+  "setting.multicol": "複数列表示",
   "setting.notification": "通知設定",
   "setting.pushNotification": "プッシュ通知",
   "setting.puzzleGenreImg": "ジャンルアイコン",
