--- a/lang/en.json
+++ b/lang/en.json
@@ -41,6 +41,7 @@
   "common.continue": "Continue",
   "common.default": "Default",
   "common.desc": "Descending",
+  "common.display": "Display",
   "common.doNotNotifyAgain": "Do not notify me again",
   "common.editTimes": "[Edited ({count})]",
   "common.enable": "Enable",
@@ -196,6 +197,7 @@
   "search.order_starSum": "Star Sum",
   "search.title": "Search old puzzles",
   "setting.editQuestionTrigger": "Edit Question",
+  "setting.multicol": "Prefer Multiple Columns",
   "setting.notification": "Notification",
   "setting.pushNotification": "Push Notification",
   "setting.puzzleGenreImg": "Display Genre Image",
