Add comments page; fix inter-site link

--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,9 @@
   "awards.group_yamiPuzzleMaxDialoguesCount": "Yami Question Count Related",
   "awards.header": "Awards",
   "awards.title": "Awards Page",
+  "comments.description": "Discover interesting puzzles with comments by users in Cindy!",
+  "comments.header": "Comments List",
+  "comments.title": "Comments",
   "common.all": "All",
   "common.apply": "Apply",
   "common.asc": "Ascending",
