--- a/lang/ja.json
+++ b/lang/ja.json
@@ -30,6 +30,9 @@
   "awards.group_yamiPuzzleMaxDialoguesCount": "闇問題質問数関連",
   "awards.header": "称号一覧",
   "awards.title": "称号一覧ページ",
+  "comments.description": "ユーザーのコメントから面白い水平思考問題を探しましょう！",
+  "comments.header": "コメント一覧",
+  "comments.title": "コメント一覧",
   "common.all": "すべて",
   "common.apply": "適用",
   "common.asc": "昇順",
